sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var n = getNombreValeurs()
  for (j<-0 to n-1){
    est_triee = true
    for (i<- n-2 to 0 by -1){
      if (plusPetit(i,i-1)){
        echange(i, i-1)
      }
    }
  }
}
